--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       
-      - name:  Deploy to EC2 via SSh
+      - name: Deploy to EC2 via SSh
         uses: applyboy/ssh-action@v1
         with: 
           host: $({ secrets.EC2_HOST  })
-          username: $({  secrets.EC2_USERNAME})
+          username: $({  secrets.EC2_USERNAME  })
           key: $({  secrets.EC2_SSH_KEY })
           scripts: |
             #navigate to the project directory on EC2
