--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Deploy to EC2 via SSh
-        uses: applyboy/ssh-action@v1
+        uses: appleboy/ssh-action@v1.2.3
         with: 
           host: $({ secrets.EC2_HOST  })
           username: $({  secrets.EC2_USERNAME  })
