--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           host: $({ secrets.EC2_HOST  })
           username: $({  secrets.EC2_USERNAME  })
           key: $({  secrets.EC2_SSH_KEY })
-          scripts: |
+          script: |
             #navigate to the project directory on EC2
             cd /var/www/dave
 
